<resources>
    <string name="app_name">My_Social_Test</string>
    <string name="password">Password</string>
    <string name="log_in">log in</string>
    <string name="log_out">log out</string>
    <string name="create_new_account">Create new account</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="go_back_to_login">Go back to login</string>
    <string name="email">Email</string>
    <string name="ConfirmPassword">Confirm password</string>
    <string name="account">Username/Email</string>
    <string name="username">Username</string>
    <string name="welcome">Welcome!</string>
    <string name="empty_bio">Go setting to write bio</string>
    <string name="bio_hint">Start bio by introducing your self</string>
    <string name="post_hint">What are you thinking</string>
    <string name="post_btn">Post</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_menu_alert">Main</string>
    <string name="update">Update</string>
    <string name="Sign_In">Sign In</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="todo">TODO</string>
    <string name="explore">Explore</string>
    <string name="start_journey">Start Your Journey</string>
    <string name="from_here">From Here...</string>
    <string name="left_label">left label</string>
    <string name="right_label">right label</string>
    <string name="test_img">test img</string>
    <string name="heart">heart</string>
    <string name="comment">comment</string>
    <string name="explore_main">explore main</string>
    <string name="chat_main">chat main</string>
    <string name="user_profile">user profile</string>
    <string name="already_member">Already a member? Just</string>
    <string name="just_log">log in !</string>
    <string name="login">Log In</string>
    <string name="user_email">Username/Email</string>
    <string name="not_a_user">Not a registered user? Just</string>
    <string name="just_sign">sign up !</string>
    <string name="sign_up_page">sing up page</string>
    <string name="join_us">Join Us</string>
</resources>