<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Activity.MyMomentActivity">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_2"
    android:gravity="center_horizontal">

        <RelativeLayout
        android:id="@+id/ly_top_bar"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/img_2">

            <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_start1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:src="@drawable/left1"
                android:contentDescription="@string/left_label" />

            <TextView
                android:id="@+id/txt_explore"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:layout_weight="6"
                android:gravity="center"
                android:text="@string/explore"
                android:textColor="@color/text_gray"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/iv_start2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:src="@drawable/img_5"
                android:contentDescription="@string/right_label" />

        </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="150dp"
            android:layout_width="match_parent"
            android:layout_height="1000dp"
            android:background="@drawable/img_2"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/start3"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="50dp"
                    android:text="@string/start_journey"
                    android:textColor="@color/text_gray"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/start4"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="50dp"
                    android:text="@string/from_here"
                    android:textColor="@color/text_gray"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="250dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/test_img"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/img_10"
                    android:contentDescription="@string/test_img" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="300dp"
                android:layout_marginTop="310dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="200dp"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/iv_hrt"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/img_11"
                    android:contentDescription="@string/heart" />

                <ImageView
                    android:id="@+id/iv_cmmt"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/img_12"
                    android:contentDescription="@string/comment" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ly_tab_bar"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/img_2"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/iv_main"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="-1dp"
                android:layout_weight="1"
                android:drawablePadding="3dp"
                android:src="@drawable/img_3"
                android:contentDescription="@string/explore_main" />

            <ImageView
                android:id="@+id/iv_chat"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="-1dp"
                android:layout_weight="1"
                android:drawablePadding="3dp"
                android:src="@drawable/img_7"
                android:contentDescription="@string/chat_main" />

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="-1dp"
                android:layout_weight="1"
                android:drawablePadding="3dp"
                android:src="@drawable/img_8"
                android:contentDescription="@string/user_profile" />


        </LinearLayout>

        <!--        <View
            android:id="@+id/div_tab_bar"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/div_white"
            android:layout_above="@id/ly_tab_bar"/>-->


        <FrameLayout
            android:id="@+id/ly_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/div_tab_bar"
            android:layout_below="@id/ly_top_bar"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="2dp"
            tools:ignore="NotSibling" />


    </RelativeLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/head"
        app:menu="@menu/menu"
        tools:ignore="MissingConstraints">

    </com.google.android.material.navigation.NavigationView>




</androidx.constraintlayout.widget.ConstraintLayout>








