<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/starter2"
    tools:context=".Activity.LoginActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="118dp"
        android:layout_marginBottom="159dp"
        android:scaleType="fitXY"
        android:src="@drawable/login_1"/>

    <TextView
        android:id="@+id/logintitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="164dp"
        android:layout_marginTop="164dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/usernameText"
        style="@style/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="220dp"
        android:text="@string/user_email" />


    <LinearLayout
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="240dp"
        android:layout_marginLeft="88dp"
        android:layout_marginRight="88dp"
        android:animateLayoutChanges="true"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/editRegisterUsername"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints="Username"
            android:inputType="text"
            android:text=""
            tools:ignore="LabelFor" />
    </LinearLayout>

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="285dp"
        android:text="@string/password" />

    <LinearLayout
        android:id="@+id/p"
        android:layout_width="236dp"
        android:layout_height="45dp"
        android:layout_marginTop="305dp"
        android:orientation="horizontal"
        android:layout_marginLeft="88dp"
        android:layout_marginRight="88dp"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/editRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="Username"
            android:inputType="textPassword"
            android:text=""
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="420dp"
        android:layout_marginRight="88dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="280dp"
            android:background="@drawable/btn_shape"
            android:gravity="center"
            android:text="@string/Sign_In"
            android:textColor="@color/black" />
    </LinearLayout>

<!--        <RelativeLayout-->
<!--            android:id="@+id/confirmPassword"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="100dp"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:layout_marginLeft="88dp"-->
<!--            android:layout_marginTop="580dp"-->
<!--            android:layout_marginRight="88dp"-->
<!--            android:orientation="horizontal">-->

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="104dp"
                android:layout_marginTop="624dp"
                android:text="@string/not_a_user" />

            <Button
                android:id="@+id/jump"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginTop="624dp"
                android:layout_marginLeft="240dp"
                android:gravity="right"
                android:background="#BAEC68EA"
                android:text="@string/just_sign"
                android:textColor="@color/black" />





</RelativeLayout>