<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_na"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <RelativeLayout
            android:id="@+id/ly_top_bar"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:background="@drawable/img_2">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_menu"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/left_label"
                    android:src="@drawable/left1" />

                <TextView
                    android:id="@+id/txt_explore"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:text="@string/explore"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp" />

                <ImageView
                    android:id="@+id/addFriendImage"
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/right_label"
                    android:src="@drawable/img_5" />

            </LinearLayout>

        </RelativeLayout>


        <ListView
            android:id="@+id/momentsList"
            android:layout_width="match_parent"
            android:layout_height="523dp"
            android:layout_marginTop="70dp" />

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginStart="275dp"
            android:layout_marginTop="545dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/postMomentButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:text="Post" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_tab_bar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/img_2"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/channel"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/explore_main"
                android:drawablePadding="3dp"
                android:src="@drawable/img_3" />

            <ImageView
                android:id="@+id/message"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="-0dp"
                android:layout_weight="1"
                android:contentDescription="@string/chat_main"
                android:drawablePadding="3dp"
                android:src="@drawable/img_7" />

            <ImageView
                android:id="@+id/setting"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="-0dp"
                android:layout_weight="1"
                android:contentDescription="@string/user_profile"
                android:drawablePadding="3dp"
                android:src="@drawable/img_8" />


        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/nav"
        app:menu="@menu/menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/head" >

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>


